--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,3 @@
 body {
-  background-color: #1e1e1e ;
-  padding: 2%;
-
+    margin: 0;
 }
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
